End session gen Repo and API errors

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings":{
     "DefaultConnection": "Data source=Clinic.db"
-  }
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
